@@ -1,6 +1,6 @@
 package uk.ac.ceh.gateway.catalogue.search;
 
-import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -8,12 +8,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import uk.ac.ceh.components.userstore.Group;
 import uk.ac.ceh.components.userstore.GroupStore;
 import uk.ac.ceh.gateway.catalogue.catalogue.Catalogue;
+import uk.ac.ceh.gateway.catalogue.catalogue.CatalogueService;
 import uk.ac.ceh.gateway.catalogue.model.CatalogueUser;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -38,6 +38,81 @@ public class SearchQueryTest {
     private static final String sortField = "publicationDate";
     private static final SolrQuery.ORDER sortOrder = SolrQuery.ORDER.desc;
 
+    private static Catalogue buildCatalogue(String id) {
+        return Catalogue.builder()
+            .id(id)
+            .title("Environmental Information Data Centre")
+            .url("https://eidc-catalogue.ceh.ac.uk")
+            .contactUrl("")
+            .logo("")
+            .build();
+    }
+
+    @Test
+    public void allCataloguesQueryHasNoCatalogueFilter() {
+        //Given
+        SearchQuery query = new SearchQuery(
+                ENDPOINT,
+                CatalogueUser.PUBLIC_USER,
+                SearchQuery.DEFAULT_SEARCH_TERM,
+                DEFAULT_BBOX,
+                SpatialOperation.ISWITHIN,
+                DEFAULT_PAGE,
+                DEFAULT_ROWS,
+                DEFAULT_FILTERS,
+                groupStore,
+                buildCatalogue(CatalogueService.ALL_CATALOGUES_ID),
+                DEFAULT_FACETS,
+                null,
+                null
+                );
+
+        //When
+        SolrQuery solrQuery = query.build();
+
+        //Then
+        String[] filterQueries = solrQuery.getFilterQueries();
+        assertThat(
+            "All-catalogues query must not contain a catalogue filter",
+            Arrays.stream(filterQueries).noneMatch(fq -> fq.contains("catalogue")),
+            is(true)
+        );
+    }
+
+    @Test
+    public void allCataloguesPublisherStillGetsViewFilter() {
+        //Given
+        CatalogueUser user = new CatalogueUser("publisher", "publisher");
+        given(groupStore.getGroups(user)).willReturn(List.of(createGroup("ROLE_EIDC_PUBLISHER")));
+
+        SearchQuery query = new SearchQuery(
+                ENDPOINT,
+                user,
+                SearchQuery.DEFAULT_SEARCH_TERM,
+                DEFAULT_BBOX,
+                SpatialOperation.ISWITHIN,
+                DEFAULT_PAGE,
+                DEFAULT_ROWS,
+                DEFAULT_FILTERS,
+                groupStore,
+                buildCatalogue(CatalogueService.ALL_CATALOGUES_ID),
+                DEFAULT_FACETS,
+                null,
+                null
+                );
+
+        //When
+        SolrQuery solrQuery = query.build();
+
+        //Then
+        assertThat(
+            "Publisher must not bypass visibility filtering in all-catalogues search",
+            Arrays.stream(solrQuery.getFilterQueries())
+                .anyMatch(fq -> fq.startsWith("view:")),
+            is(true)
+        );
+    }
+
     @Test
     public void queryHasCatalogueAsViewFilter() {
         //Given
@@ -51,14 +126,7 @@ public class SearchQueryTest {
                 DEFAULT_ROWS,
                 DEFAULT_FILTERS,
                 groupStore,
-                Catalogue
-                .builder()
-                .id("eidc")
-                .title("Environmental Information Data Centre")
-                .url("https://eidc-catalogue.ceh.ac.uk")
-                .contactUrl("")
-                .logo("")
-                .build(),
+                buildCatalogue("eidc"),
                 DEFAULT_FACETS,
                 sortField,
                 sortOrder
@@ -232,7 +300,7 @@ public class SearchQueryTest {
         assertThat(solrQuery.getStart(), is(equalTo(0)));
         assertThat(solrQuery.getRows(), is(equalTo(DEFAULT_ROWS)));
         assertThat(solrQuery.getFacetMinCount(), is(equalTo(1)));
-        assertThat(solrQuery.getSorts().get(0).getItem().substring(0, 6), is(equalTo("random")));
+        assertThat(solrQuery.getSorts().getFirst().getItem().substring(0, 6), is(equalTo("random")));
         assertThat("Facets should have a default limit of -1 (ie infinite)", solrQuery.getFacetLimit(), equalTo(-1));
     }
 
